--- a/test-output/index.html
+++ b/test-output/index.html
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Grouping_Suite" class="navigator-link ">
-                    <span>3 groups</span>
+                    <span>4 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,6 +104,31 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Grouping_Suite" title="testCases.TC002_LoginVerification" class="method navigator-link" hash-for-method="loginVerification">loginVerification</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Grouping_Suite" title="testCases.TC001_AccountRegistrationTest" class="method navigator-link" hash-for-method="verifyAccountRegistration">verifyAccountRegistration</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Grouping_Suite" title="testCases.TC003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(pavan@gmail.com, qwert567, Invalid)">verify_loginDDT(pavan@gmail.com, qwert567, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Grouping_Suite" title="testCases.TC003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(rajeev@gmail.com, qbshd5682, Invalid)">verify_loginDDT(rajeev@gmail.com, qbshd5682, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Grouping_Suite" title="testCases.TC003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(ravi@gmail.com, 12345678, valid)">verify_loginDDT(ravi@gmail.com, 12345678, valid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Grouping_Suite" title="testCases.TC003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(nitish@gmail.com, jcjkjkbc5785, Invalid)">verify_loginDDT(nitish@gmail.com, jcjkjkbc5785, Invalid)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Grouping_Suite -->
@@ -121,6 +146,21 @@
           <div class="suite-Grouping_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">testCases.TC001_AccountRegistrationTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyAccountRegistration">
+                  </a> <!-- verifyAccountRegistration -->
+                  <span class="method-name">verifyAccountRegistration</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Grouping_Suite-class-passed -->
+          <div class="suite-Grouping_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">testCases.TC002_LoginVerification</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -129,6 +169,46 @@
                   <a name="loginVerification">
                   </a> <!-- loginVerification -->
                   <span class="method-name">loginVerification</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Grouping_Suite-class-passed -->
+          <div class="suite-Grouping_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">testCases.TC003_LoginDDT</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_loginDDT(pavan@gmail.com, qwert567, Invalid)">
+                  </a> <!-- verify_loginDDT(pavan@gmail.com, qwert567, Invalid) -->
+                  <span class="method-name">verify_loginDDT</span>
+                  <span class="parameters">(pavan@gmail.com,qwert567,Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_loginDDT(rajeev@gmail.com, qbshd5682, Invalid)">
+                  </a> <!-- verify_loginDDT(rajeev@gmail.com, qbshd5682, Invalid) -->
+                  <span class="method-name">verify_loginDDT</span>
+                  <span class="parameters">(rajeev@gmail.com,qbshd5682,Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_loginDDT(ravi@gmail.com, 12345678, valid)">
+                  </a> <!-- verify_loginDDT(ravi@gmail.com, 12345678, valid) -->
+                  <span class="method-name">verify_loginDDT</span>
+                  <span class="parameters">(ravi@gmail.com,12345678,valid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_loginDDT(nitish@gmail.com, jcjkjkbc5785, Invalid)">
+                  </a> <!-- verify_loginDDT(nitish@gmail.com, jcjkjkbc5785, Invalid) -->
+                  <span class="method-name">verify_loginDDT</span>
+                  <span class="parameters">(nitish@gmail.com,jcjkjkbc5785,Invalid)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -145,12 +225,12 @@
 &lt;suite name=&quot;Grouping Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;groups&gt;
     &lt;run&gt;
-      &lt;include name=&quot;Sanity&quot;/&gt;
+      &lt;include name=&quot;Master&quot;/&gt;
     &lt;/run&gt;
   &lt;/groups&gt;
   &lt;groups&gt;
     &lt;run&gt;
-      &lt;include name=&quot;Sanity&quot;/&gt;
+      &lt;include name=&quot;Master&quot;/&gt;
     &lt;/run&gt;
   &lt;/groups&gt;
   &lt;listeners&gt;
@@ -160,7 +240,9 @@
     &lt;parameter name=&quot;os&quot; value=&quot;window&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;testCases.TC001_AccountRegistrationTest&quot;/&gt;
       &lt;class name=&quot;testCases.TC002_LoginVerification&quot;/&gt;
+      &lt;class name=&quot;testCases.TC003_LoginDDT&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Grouping Suite --&gt;
@@ -174,7 +256,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -191,6 +273,14 @@
                 <span class="method-in-group-name">loginVerification</span>
                 <br/>
               </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">verifyAccountRegistration</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">verify_loginDDT</span>
+                <br/>
+              </div> <!-- method-in-group -->
             </div> <!-- test-group -->
             <div class="test-group">
               <span class="test-group-name">Regression</span>
@@ -199,12 +289,28 @@
                 <span class="method-in-group-name">loginVerification</span>
                 <br/>
               </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">verify_loginDDT</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Regresssion</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">verifyAccountRegistration</span>
+                <br/>
+              </div> <!-- method-in-group -->
             </div> <!-- test-group -->
             <div class="test-group">
               <span class="test-group-name">Sanity</span>
               <br/>
               <div class="method-in-group">
                 <span class="method-in-group-name">loginVerification</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">verifyAccountRegistration</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -224,16 +330,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginVerification')
-data.setCell(0, 2, 'testCases.TC002_LoginVerification')
-data.setCell(0, 3, 2420);
+data.setCell(0, 1, 'verify_loginDDT')
+data.setCell(0, 2, 'testCases.TC003_LoginDDT')
+data.setCell(0, 3, 5208);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyAccountRegistration')
+data.setCell(1, 2, 'testCases.TC001_AccountRegistrationTest')
+data.setCell(1, 3, 4969);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verify_loginDDT')
+data.setCell(2, 2, 'testCases.TC003_LoginDDT')
+data.setCell(2, 3, 4649);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verify_loginDDT')
+data.setCell(3, 2, 'testCases.TC003_LoginDDT')
+data.setCell(3, 3, 3374);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'loginVerification')
+data.setCell(4, 2, 'testCases.TC002_LoginVerification')
+data.setCell(4, 3, 3350);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'verify_loginDDT')
+data.setCell(5, 2, 'testCases.TC003_LoginDDT')
+data.setCell(5, 3, 2954);
 window.suiteTableData['Grouping_Suite']= { tableData: data, tableDiv: 'times-div-Grouping_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Grouping_Suite">
               </div> <!-- times-div-Grouping_Suite -->
             </div> <!-- times-div -->
@@ -259,18 +385,60 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC002_LoginVerification</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC001_AccountRegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(window, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">loginVerification</span>
-                <span class="method-start">13774 ms</span>
+                <span class="method-name">verifyAccountRegistration</span>
+                <span class="method-start">4653 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">16230 ms</span>
+                <span class="method-start">9646 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testCases.TC002_LoginVerification</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup(window, chrome)</span>
+                <span class="method-start">9928 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">loginVerification</span>
+                <span class="method-start">12232 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">15590 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testCases.TC003_LoginDDT</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup(window, chrome)</span>
+                <span class="method-start">15867 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">verify_loginDDT(pavan@gmail.com, qwert567, Invalid)</span>
+                <span class="method-start">20618 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verify_loginDDT(rajeev@gmail.com, qbshd5682, Invalid)</span>
+                <span class="method-start">25829 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verify_loginDDT(nitish@gmail.com, jcjkjkbc5785, Invalid)</span>
+                <span class="method-start">29206 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verify_loginDDT(ravi@gmail.com, 12345678, valid)</span>
+                <span class="method-start">33867 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">36826 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
